shodrone.LPROG/src/main/java/genShowProposalPlaceholder/ShowProposalPlaceholderParser.java
// Generated from C:/ISEP-PROJETOS/lapr4_projeto/shodrone.LPROG/src/main/java/antlr/ShowProposalPlaceholder.g4 by ANTLR 4.13.2
package genShowProposalPlaceholder;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;


@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ShowProposalPlaceholderParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, GREETINGS=6, TITLE_PHRASE=7, PREFEREMCE_PHRASE=8, 
		SUBSCRIBE_PHRASE=9, LAST_PHRASE=10, REGARDS=11, LINE_1_FORMAT=12, VIP_LINE1_PLACEHOLDER=13, 
		LINE_2_FORMAT=14, LINE3_PLACEHOLDER=15, LINK_PLACEHOLDER=16, CLOSING_FORMAT_PLACEHOLDER=17, 
		INSURANCE_AMOUNT_PLACEHOLDER=18, SHOW_DATE_FORMAT=19, SHOW_DATE_PLACEHOLDER_LINE=20, 
		SHOW_DATE_PLACEHOLDER=21, FIGURE_ITEM_PLACEHOLDER=22, FIGURE_POSITION_PLACEHOLDER=23, 
		FIGURE_NAME_PLACEHOLDER=24, PERSON_NAME_PLACEHOLDER=25, CRM_MANAGER_PLACEHOLDER=26, 
		COMPANY_PLACEHOLDER=27, ADDRESS_PLACEHOLDER=28, VAT_NUMBER_PLACEHOLDER=29, 
		DRONE_ITEM_FORMAT=30, DRONE_ITEM_PLACEHOLDER=31, DRONE_MODEL_PLACEHOLDER=32, 
		DRONE_MODEL_QUANTITY_PLACEHOLDER=33, GPS_LINE=34, GPS_LINE_PLACEHOLDER=35, 
		GPS_PLACEHOLDER=36, ATTACHMENT_LINE=37, ATTACHMENT_PLACEHOLDER=38, SHOW_PROPOSAL_PLACEHOLDER=39, 
		REFERENCE_LINE=40, REFERENCE_PLACEHOLDER=41, PROPOSAL_PLACEHOLDER=42, 
		DATE_PLACEHOLDER=43, TIME_LINE=44, TIME_PLACEHOLDER_LINE=45, TIME_PLACEHOLDER=46, 
		DURATION_LINE=47, DURATION_MINUTES=48, DURATION_PLACEHOLDER_LINE=49, DURATION_PLACEHOLDER=50, 
		PAGE_BREAK=51, NEWLINE=52;
	public static final int
		RULE_proposal = 0, RULE_header = 1, RULE_greeting = 2, RULE_companyInfo = 3, 
		RULE_personName = 4, RULE_personNamePlaceholder = 5, RULE_company = 6, 
		RULE_companyPlaceHolder = 7, RULE_address = 8, RULE_addressPlaceHolder = 9, 
		RULE_vatNumber = 10, RULE_vatNumberPlaceHolder = 11, RULE_reference = 12, 
		RULE_referencePlaceHolder = 13, RULE_titleProposal = 14, RULE_body = 15, 
		RULE_line_1 = 16, RULE_normal_line1 = 17, RULE_vip_line1 = 18, RULE_vip_line1_Placeholder = 19, 
		RULE_line_2 = 20, RULE_line_3 = 21, RULE_line3_placeholder = 22, RULE_closing = 23, 
		RULE_closing_placeholder = 24, RULE_signature = 25, RULE_crmManagerName = 26, 
		RULE_managerName_Placeholder = 27, RULE_signature_option = 28, RULE_preferencePhrase = 29, 
		RULE_subscribePhrase = 30, RULE_lastPhrase = 31, RULE_regards = 32, RULE_showDetails = 33, 
		RULE_attachment = 34, RULE_attachment_placeholder = 35, RULE_location = 36, 
		RULE_location_placeholder = 37, RULE_date = 38, RULE_date_placeholder = 39, 
		RULE_time = 40, RULE_time_placeholder = 41, RULE_duration = 42, RULE_duration_placeholder = 43, 
		RULE_droneList = 44, RULE_droneListPlaceholders = 45, RULE_figureList = 46, 
		RULE_figureListPlaceholder = 47;
	private static String[] makeRuleNames() {
		return new String[] {
			"proposal", "header", "greeting", "companyInfo", "personName", "personNamePlaceholder", 
			"company", "companyPlaceHolder", "address", "addressPlaceHolder", "vatNumber", 
			"vatNumberPlaceHolder", "reference", "referencePlaceHolder", "titleProposal", 
			"body", "line_1", "normal_line1", "vip_line1", "vip_line1_Placeholder", 
			"line_2", "line_3", "line3_placeholder", "closing", "closing_placeholder", 
			"signature", "crmManagerName", "managerName_Placeholder", "signature_option", 
			"preferencePhrase", "subscribePhrase", "lastPhrase", "regards", "showDetails", 
			"attachment", "attachment_placeholder", "location", "location_placeholder", 
			"date", "date_placeholder", "time", "time_placeholder", "duration", "duration_placeholder", 
			"droneList", "droneListPlaceholders", "figureList", "figureListPlaceholder"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'CRM Manager'", "'#List of used drones'", "'#Lista de drones utilizados'", 
			"'#Lista de figuras'", "'#List of figures'", null, null, null, null, 
			"'Looking forward to hearing from you soon.'", null, null, null, null, 
			null, "'[link to show video]'", null, null, null, null, "'[date of the event]'", 
			null, "'[position in show]'", "'[figure name]'", "'[Customer Representative Name]'", 
			"'[CRM Manager Name]'", null, "'[Address with postal code and country]'", 
			"'[VAT Number]'", null, null, "'[model]'", "'[quantity]'", null, null, 
			"'[GPS coordinates of the location]'", null, null, "'[show proposal number]'", 
			null, null, "'[proposal number]'", "'[date]'", null, null, "'[time of the event]'", 
			null, null, null, "'[duration]'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, "GREETINGS", "TITLE_PHRASE", "PREFEREMCE_PHRASE", 
			"SUBSCRIBE_PHRASE", "LAST_PHRASE", "REGARDS", "LINE_1_FORMAT", "VIP_LINE1_PLACEHOLDER", 
			"LINE_2_FORMAT", "LINE3_PLACEHOLDER", "LINK_PLACEHOLDER", "CLOSING_FORMAT_PLACEHOLDER", 
			"INSURANCE_AMOUNT_PLACEHOLDER", "SHOW_DATE_FORMAT", "SHOW_DATE_PLACEHOLDER_LINE", 
			"SHOW_DATE_PLACEHOLDER", "FIGURE_ITEM_PLACEHOLDER", "FIGURE_POSITION_PLACEHOLDER", 
			"FIGURE_NAME_PLACEHOLDER", "PERSON_NAME_PLACEHOLDER", "CRM_MANAGER_PLACEHOLDER", 
			"COMPANY_PLACEHOLDER", "ADDRESS_PLACEHOLDER", "VAT_NUMBER_PLACEHOLDER", 
			"DRONE_ITEM_FORMAT", "DRONE_ITEM_PLACEHOLDER", "DRONE_MODEL_PLACEHOLDER", 
			"DRONE_MODEL_QUANTITY_PLACEHOLDER", "GPS_LINE", "GPS_LINE_PLACEHOLDER", 
			"GPS_PLACEHOLDER", "ATTACHMENT_LINE", "ATTACHMENT_PLACEHOLDER", "SHOW_PROPOSAL_PLACEHOLDER", 
			"REFERENCE_LINE", "REFERENCE_PLACEHOLDER", "PROPOSAL_PLACEHOLDER", "DATE_PLACEHOLDER", 
			"TIME_LINE", "TIME_PLACEHOLDER_LINE", "TIME_PLACEHOLDER", "DURATION_LINE", 
			"DURATION_MINUTES", "DURATION_PLACEHOLDER_LINE", "DURATION_PLACEHOLDER", 
			"PAGE_BREAK", "NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ShowProposalPlaceholder.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ShowProposalPlaceholderParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProposalContext extends ParserRuleContext {
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ShowProposalPlaceholderParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ShowProposalPlaceholderParser.NEWLINE, i);
		}
		public ReferenceContext reference() {
			return getRuleContext(ReferenceContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public ClosingContext closing() {
			return getRuleContext(ClosingContext.class,0);
		}
		public SignatureContext signature() {
			return getRuleContext(SignatureContext.class,0);
		}
		public TerminalNode PAGE_BREAK() { return getToken(ShowProposalPlaceholderParser.PAGE_BREAK, 0); }
		public ShowDetailsContext showDetails() {
			return getRuleContext(ShowDetailsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ShowProposalPlaceholderParser.EOF, 0); }
		public ProposalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_proposal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalPlaceholderListener ) ((ShowProposalPlaceholderListener)listener).enterProposal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalPlaceholderListener ) ((ShowProposalPlaceholderListener)listener).exitProposal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalPlaceholderVisitor ) return ((ShowProposalPlaceholderVisitor<? extends T>)visitor).visitProposal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProposalContext proposal() throws RecognitionException {
		ProposalContext _localctx = new ProposalContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_proposal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			header();
			setState(97);
			match(NEWLINE);
			setState(98);
			reference();
			setState(99);
			match(NEWLINE);
			setState(100);
			match(NEWLINE);
			setState(101);
			body();
			setState(102);
			match(NEWLINE);
			setState(103);
			match(NEWLINE);
			setState(104);
			closing();
			setState(105);
			match(NEWLINE);
			setState(106);
			match(NEWLINE);
			setState(107);
			signature();
			setState(108);
			match(NEWLINE);
			setState(109);
			match(NEWLINE);
			setState(110);
			match(PAGE_BREAK);
			setState(111);
			match(NEWLINE);
			setState(112);
			match(NEWLINE);
			setState(113);
			showDetails();
			setState(114);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HeaderContext extends ParserRuleContext {
		public GreetingContext greeting() {
			return getRuleContext(GreetingContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(ShowProposalPlaceholderParser.NEWLINE, 0); }
		public CompanyInfoContext companyInfo() {
			return getRuleContext(CompanyInfoContext.class,0);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalPlaceholderListener ) ((ShowProposalPlaceholderListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalPlaceholderListener ) ((ShowProposalPlaceholderListener)listener).exitHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalPlaceholderVisitor ) return ((ShowProposalPlaceholderVisitor<? extends T>)visitor).visitHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			greeting();
			setState(117);
			match(NEWLINE);
			setState(118);
			companyInfo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GreetingContext extends ParserRuleContext {
		public TerminalNode GREETINGS() { return getToken(ShowProposalPlaceholderParser.GREETINGS, 0); }
		public GreetingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_greeting; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalPlaceholderListener ) ((ShowProposalPlaceholderListener)listener).enterGreeting(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalPlaceholderListener ) ((ShowProposalPlaceholderListener)listener).exitGreeting(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalPlaceholderVisitor ) return ((ShowProposalPlaceholderVisitor<? extends T>)visitor).visitGreeting(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GreetingContext greeting() throws RecognitionException {
		GreetingContext _localctx = new GreetingContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_greeting);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(GREETINGS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompanyInfoContext extends ParserRuleContext {
		public CompanyContext company() {
			return getRuleContext(CompanyContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ShowProposalPlaceholderParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ShowProposalPlaceholderParser.NEWLINE, i);
		}
		public AddressContext address() {
			return getRuleContext(AddressContext.class,0);
		}
		public VatNumberContext vatNumber() {
			return getRuleContext(VatNumberContext.class,0);
		}
		public PersonNameContext personName() {
			return getRuleContext(PersonNameContext.class,0);
		}
		public CompanyInfoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_companyInfo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalPlaceholderListener ) ((ShowProposalPlaceholderListener)listener).enterCompanyInfo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalPlaceholderListener ) ((ShowProposalPlaceholderListener)listener).exitCompanyInfo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalPlaceholderVisitor ) return ((ShowProposalPlaceholderVisitor<? extends T>)visitor).visitCompanyInfo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompanyInfoContext companyInfo() throws RecognitionException {
		CompanyInfoContext _localctx = new CompanyInfoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_companyInfo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PERSON_NAME_PLACEHOLDER) {
				{
				setState(122);
				personName();
				setState(123);
				match(NEWLINE);
				}
			}

			setState(127);
			company();
			setState(128);
			match(NEWLINE);
			setState(129);
			address();
			setState(130);
			match(NEWLINE);
			setState(131);
			vatNumber();
			setState(132);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PersonNameContext extends ParserRuleContext {
		public PersonNamePlaceholderContext personNamePlaceholder() {
			return getRuleContext(PersonNamePlaceholderContext.class,0);
		}
		public PersonNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_personName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalPlaceholderListener ) ((ShowProposalPlaceholderListener)listener).enterPersonName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalPlaceholderListener ) ((ShowProposalPlaceholderListener)listener).exitPersonName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalPlaceholderVisitor ) return ((ShowProposalPlaceholderVisitor<? extends T>)visitor).visitPersonName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PersonNameContext personName() throws RecognitionException {
		PersonNameContext _localctx = new PersonNameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_personName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			personNamePlaceholder();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PersonNamePlaceholderContext extends ParserRuleContext {
		public TerminalNode PERSON_NAME_PLACEHOLDER() { return getToken(ShowProposalPlaceholderParser.PERSON_NAME_PLACEHOLDER, 0); }
		public PersonNamePlaceholderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_personNamePlaceholder; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalPlaceholderListener ) ((ShowProposalPlaceholderListener)listener).enterPersonNamePlaceholder(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalPlaceholderListener ) ((ShowProposalPlaceholderListener)listener).exitPersonNamePlaceholder(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalPlaceholderVisitor ) return ((ShowProposalPlaceholderVisitor<? extends T>)visitor).visitPersonNamePlaceholder(this);
			else return visitor.visitChildren(this);
		}
	}
